--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,3 +25,18 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build
+
+      - name: Upload JAR file
+        uses: actions/upload-artifact@v4
+        with:
+          name: Artifacts
+          path: build/libs/*.jar
+
+      - name: Publish
+        if: github.ref == 'refs/heads/main' && github.repository_owner == 'SuperCrafting'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_USERNAME: ${{ github.repository_owner }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          BUILD_VERSION: ${{ github.run_number }}
+        run: ./gradlew publish
