--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 group = 'pt.supercrafting.menu'
@@ -28,4 +29,31 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+publishing {
+
+    publications {
+        maven(MavenPublication) {
+            groupId = project.group
+            artifactId = 'menu-api'
+            version = project.version
+
+            from components.java
+        }
+    }
+
+    repositories {
+        maven {
+            credentials {
+                username System.getenv('GITHUB_USERNAME')
+                password System.getenv('GITHUB_TOKEN')
+            }
+            name = "menu-api"
+
+            String owner = System.getenv('GITHUB_USERNAME')
+            String repository = System.getenv('GITHUB_REPOSITORY') ?: 'menu-api'
+            url = "https://maven.pkg.github.com/" + owner "/" + repository
+        }
+    }
 }
